--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "5.3.3",
     "vite": "^5.3.1"
   }
 }
