Update linting config

--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,4 +1,14 @@
-singleQuote: true
-semi: false
-printWidth: 100
-trailingComma: none
+tailwindConfig: "./tailwind.config.js"
+trailingComma: "es5"
+arrowParens: "avoid"
+printWidth: 81
+tabWidth: 3
+useTabs: false
+semi: true
+quoteProps: "as-needed"
+jsxSingleQuote: false
+singleQuote: false
+bracketSpacing: true
+bracketSameLine: false
+proseWrap: "always"
+endOfLine: "lf"
