--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
       "@electron-toolkit/eslint-config": "^1.0.2",
       "@electron-toolkit/eslint-config-prettier": "^2.0.0",
       "@vitejs/plugin-react": "^4.3.1",
+      "autoprefixer": "^10.4.20",
       "electron": "^31.0.2",
       "electron-builder": "^24.13.3",
       "electron-vite": "^2.3.0",
       "eslint": "^8.57.0",
       "eslint-plugin-react": "^7.34.3",
+      "postcss": "^8.4.47",
+      "postcss-loader": "^8.1.1",
       "prettier": "^3.3.2",
       "react": "^18.3.1",
       "react-dom": "^18.3.1",
+      "tailwindcss": "^3.4.14",
       "vite": "^5.3.1"
    }
 }
