--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
    "dependencies": {
       "@electron-toolkit/preload": "^3.0.1",
       "@electron-toolkit/utils": "^3.0.0",
+      "classnames": "^2.5.1",
       "electron-router-dom": "^2.0.0",
       "electron-updater": "^6.1.7",
       "react-router-dom": "^6.26.2"
