--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
       "dev": "electron-vite dev -w",
       "build": "electron-vite build",
       "postinstall": "electron-builder install-app-deps",
-      "build:unpack": "npm run build && electron-builder --dir",
-      "build:win": "npm run build && electron-builder --win",
-      "build:mac": "npm run build && electron-builder --mac",
-      "build:linux": "npm run build && electron-builder --linux"
+      "build:unpack": "yarn build && electron-builder --dir",
+      "build:win": "yarn build && electron-builder --win",
+      "build:mac": "yarn build && electron-builder --mac",
+      "build:linux": "yarn build && electron-builder --linux"
    },
    "dependencies": {
       "@electron-toolkit/preload": "^3.0.1",
@@ -23,6 +23,8 @@
       "classnames": "^2.5.1",
       "electron-router-dom": "^2.0.0",
       "electron-updater": "^6.1.7",
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1",
       "react-router-dom": "^6.26.2"
    },
    "devDependencies": {
@@ -38,8 +40,6 @@
       "postcss": "^8.4.47",
       "postcss-loader": "^8.1.1",
       "prettier": "^3.3.2",
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1",
       "tailwindcss": "^3.4.14",
       "vite": "^5.3.1"
    }
