--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "classnames": "^2.5.1",
       "electron-router-dom": "^2.0.0",
       "electron-updater": "^6.1.7",
+      "lucide-react": "^0.469.0",
       "react": "^18.3.1",
       "react-dom": "^18.3.1",
       "react-router-dom": "^6.26.2"
