--- a/.github/workflows/build-and-release-app.yml
+++ b/.github/workflows/build-and-release-app.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
    release:
+      permissions:
+         contents: write
       # Run only if commit message contains [bump-version]
       if: contains(github.event.head_commit.message, '[bump-version]')
       runs-on: macos-latest
