--- a/.github/workflows/build-and-release-app.yml
+++ b/.github/workflows/build-and-release-app.yml
@@ -57,6 +57,6 @@ jobs:
               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
            with:
               upload_url: ${{ steps.create_release.outputs.upload_url }}
-              asset_path: ./dist/your-app-name.dmg
-              asset_name: YourApp-${{ steps.get-version.outputs.version }}.dmg
+              asset_path: ./dist/fumble-${{ steps.get-version.outputs.version }}.dmg
+              asset_name: fumble-${{ steps.get-version.outputs.version }}.dmg
               asset_content_type: application/x-apple-diskimage
