--- a/.github/workflows/build-and-release-app.yml
+++ b/.github/workflows/build-and-release-app.yml
@@ -51,7 +51,7 @@ jobs:
               draft: false
               prerelease: false
 
-         - name: Upload Release Asset (dmg)
+         - name: Upload Release Asset
            uses: actions/upload-release-asset@v1
            env:
               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -59,14 +59,4 @@ jobs:
               upload_url: ${{ steps.create_release.outputs.upload_url }}
               asset_path: ./dist/fumble-${{ steps.get-version.outputs.version }}.dmg
               asset_name: fumble-${{ steps.get-version.outputs.version }}.dmg
-              asset_content_type: application/x-apple-diskimage
-
-         - name: Upload Release Asset (mac.zip)
-           uses: actions/upload-release-asset@v1
-           env:
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-           with:
-              upload_url: ${{ steps.create_release.outputs.upload_url }}
-              asset_path: ./dist/fumble-${{ steps.get-version.outputs.version }}-mac.zip
-              asset_name: fumble-${{ steps.get-version.outputs.version }}-mac.zip
               asset_content_type: application/x-apple-diskimage
