--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
       "electron-builder": "^24.13.3",
       "electron-vite": "^2.3.0",
       "eslint": "^8.57.0",
+      "eslint-plugin-perfectionist": "^4.4.0",
       "eslint-plugin-react": "^7.34.3",
       "postcss": "^8.4.47",
       "postcss-loader": "^8.1.1",
