--- a/.github/workflows/deploy-www.yml
+++ b/.github/workflows/deploy-www.yml
@@ -30,12 +30,22 @@ jobs:
       steps:
          - name: Checkout
            uses: actions/checkout@v4
+         - name: Setup Node.js
+           uses: actions/setup-node@v4
+           with:
+              node-version: "20"
+         - name: Install dependencies
+           working-directory: ./www
+           run: npm install
+         - name: Build Tailwind CSS
+           working-directory: ./www
+           run: npm run build
          - name: Setup Pages
            uses: actions/configure-pages@v5
          - name: Upload artifact
            uses: actions/upload-pages-artifact@v3
            with:
-              # Upload entire repository
+              # Upload www folder (now includes built CSS)
               path: "www"
          - name: Deploy to GitHub Pages
            id: deployment
