--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
    "scripts": {
       "format": "prettier --write .",
       "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+      "typecheck": "tsc --noEmit",
       "start": "electron-vite preview",
       "dev": "ELECTRON_ENV=development electron-vite dev -w",
       "build": "electron-vite build",
@@ -31,6 +32,9 @@
    "devDependencies": {
       "@electron-toolkit/eslint-config": "^1.0.2",
       "@electron-toolkit/eslint-config-prettier": "^2.0.0",
+      "@electron-toolkit/tsconfig": "^2.0.0",
+      "@types/react": "^19.2.7",
+      "@types/react-dom": "^19.2.3",
       "@vitejs/plugin-react": "^4.3.1",
       "autoprefixer": "^10.4.20",
       "electron": "^31.0.2",
@@ -43,6 +47,7 @@
       "postcss-loader": "^8.1.1",
       "prettier": "^3.3.2",
       "tailwindcss": "^3.4.14",
+      "typescript": "^5.9.3",
       "vite": "^5.3.1"
    }
 }
