upgrade tailwind to v4; build www css; fix yarn build fails

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "start": "electron-vite preview",
       "dev": "ELECTRON_ENV=development electron-vite dev -w",
       "build": "electron-vite build",
+      "build:www": "npx @tailwindcss/cli -i ./www/src/input.css -o ./www/output.css --minify",
       "postinstall": "electron-builder install-app-deps",
       "build:unpack": "yarn build && electron-builder --dir",
       "build:win": "yarn build && electron-builder --win",
@@ -33,10 +34,11 @@
       "@electron-toolkit/eslint-config": "^1.0.2",
       "@electron-toolkit/eslint-config-prettier": "^2.0.0",
       "@electron-toolkit/tsconfig": "^2.0.0",
+      "@tailwindcss/cli": "^4.1.18",
+      "@tailwindcss/postcss": "^4.1.18",
       "@types/react": "^19.2.7",
       "@types/react-dom": "^19.2.3",
       "@vitejs/plugin-react": "^4.3.1",
-      "autoprefixer": "^10.4.20",
       "electron": "^31.0.2",
       "electron-builder": "^24.13.3",
       "electron-vite": "^2.3.0",
@@ -46,7 +48,7 @@
       "postcss": "^8.4.47",
       "postcss-loader": "^8.1.1",
       "prettier": "^3.3.2",
-      "tailwindcss": "^3.4.14",
+      "tailwindcss": "^4.1.18",
       "typescript": "^5.9.3",
       "vite": "^5.3.1"
    }
