--- a/.github/workflows/deploy-www.yml
+++ b/.github/workflows/deploy-www.yml
@@ -35,11 +35,9 @@ jobs:
            with:
               node-version: "20"
          - name: Install dependencies
-           working-directory: ./www
-           run: npm install
-         - name: Build Tailwind CSS
-           working-directory: ./www
-           run: npm run build
+           run: npm install @tailwindcss/cli
+         - name: Build Tailwind CSS for www
+           run: npm run build:www
          - name: Setup Pages
            uses: actions/configure-pages@v5
          - name: Upload artifact
