--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -5,9 +5,11 @@ directories:
 files:
    - "!**/.vscode/*"
    - "!src/*"
+   - "!www/**/*"
    - "!electron.vite.config.{js,ts,mjs,cjs}"
    - "!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}"
    - "!{.env,.env.*,.npmrc,pnpm-lock.yaml}"
+   - "!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}"
 asarUnpack:
    - resources/**
 win:
