--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
       "@tailwindcss/postcss": "^4.1.18",
       "@types/react": "^19.2.7",
       "@types/react-dom": "^19.2.3",
+      "@typescript-eslint/eslint-plugin": "^8.49.0",
+      "@typescript-eslint/parser": "^8.49.0",
       "@vitejs/plugin-react": "^4.3.1",
       "electron": "^31.0.2",
       "electron-builder": "^24.13.3",
