--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -2,13 +2,17 @@
   "extends": "@electron-toolkit/tsconfig/tsconfig.web.json",
   "include": [
     "src/renderer/src/**/*",
-    "src/preload/*.d.ts"
+    "src/preload/*.d.ts",
+    "src/lib/**/*",
+    "src/shared/**/*"
   ],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
     "paths": {
-      "@renderer/*": ["src/renderer/src/*"]
+      "@renderer/*": [
+        "src/renderer/src/*"
+      ]
     }
   }
 }
